# bbm47980_bts

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Brats2021.ipynb  README.MD  README.md  demo.py  environment.yml  pyproject.toml  requirements.txt
brain_tumor_segmentation/: README.md  bts_dataset.py  investigate_sample.py
brain_tumor_segmentation/common/: logutils.py  miscutils.py
brain_tumor_segmentation/dataset_scripts/: convert_dataset.sh  investigate_sample.py  process_dataset.py
brain_tumor_segmentation/swinunetr/: inference.py  model.py  train.py
brain_tumor_segmentation/train/: swine_unetr.py
bts/: README.md
bts/common/: logutils.py  miscutils.py
bts/data/: __init__.py  dataset.py  datautils.py  porcupine_dataset.py  transform_porcupine.py  utils.py
bts/dataset_scripts/: process_dataset.py
bts/swinunetr/: hyperparameters.yaml  inference.py  model.py  train-old.py  (+2 more)
common/: logutils.py  miscutils.py
data/: btsed_dataset.py  dataset.py  dummydataset.py
documents/: A Labeling, Learning and Visualization Tool for Brain Imagery.pptx
notebooks/: SwinUNETR-Inference.ipynb  SwinUNETR-TEST.ipynb  SwinUNETR-Train-Val.ipynb  SwinUNETR.ipynb  SwinUNETR.py  check_nrrd_resolution.ipynb  mmformer after finetune.ipynb  mmformer scoring.ipynb  mmformer_prediction_wout_finetune.ipynb  mmformer_train_test.ipynb  monai_swin_unetr_brats21_segmentation_3d.ipynb  reading_nrrd_files.ipynb
scripts/: echidna_swin_inference.sh  echidna_swin_old.sh  echidna_swin_train.sh
src/: README.md
swinunetr/: hyperparameters.yaml  inference.py  model.py  train.py
(+13 files in other folders)
